<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/parisstreet"
    tools:context="com.example.stephen.languor.mainMenuActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:scaleType="fitStart"
        android:id="@+id/titleImageView"
        android:src="@drawable/languortitle2"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/learnModeButton"
        android:text="@string/learn_mode"
        android:textSize="18sp"
        android:layout_below="@id/titleImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="learnMenuOpen"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quizModeButton"
        android:text="@string/quiz_button"
        android:textSize="18sp"
        android:layout_below="@id/learnModeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="quizMenuOpen"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/achieveButton"
        android:text="@string/rewards_button"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="achieveMenuOpen"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:text="@string/settings_button"
        android:textSize="13sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="settingsMenuOpen"
        />
</RelativeLayout>
