<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stephen.languor.quizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:id="@+id/quizQuestTV"
        android:text="@string/placeholder"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizQuestTV"
        android:layout_marginBottom="10dp"
        android:id="@+id/quizOpt1Butt"
        android:text=""
        android:onClick="optSelect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizOpt1Butt"
        android:layout_marginBottom="10dp"
        android:id="@+id/quizOpt2Butt"
        android:text=""
        android:onClick="optSelect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizOpt2Butt"
        android:layout_marginBottom="10dp"
        android:id="@+id/quizOpt3Butt"
        android:text=""
        android:onClick="optSelect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizOpt3Butt"
        android:id="@+id/quizOpt4Butt"
        android:text=""
        android:onClick="optSelect"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/quizBackButt"
        android:text="@string/quiz_quit_butt"
        />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DD000000"
        android:visibility="gone"
        android:id="@+id/quizEndOverlay"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:id="@+id/overlayGratsTV"
            android:text="@string/quiz_finish"
            android:textSize="35sp"
            android:textColor="#FFFFFFFF"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/overlayGratsTV"
            android:id="@+id/overlayScoreTV"
            android:textSize="35sp"
            android:textColor="#FFFFFFFF"
            android:text="@string/score_label"
            android:textAlignment="center"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/overlayScoreTV"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/scoreVariableTV"
                android:textSize="75sp"
                android:textColor="#FFFFFFFF"
                android:text=""
                android:textAlignment="center"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/scorePara"
                android:textSize="75sp"
                android:textColor="#FFFFFFFF"
                android:text="@string/parantheses"
                android:textAlignment="center"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/scoreConstTV"
                android:textSize="75sp"
                android:textColor="#FFFFFFFF"
                android:text=""
                android:textAlignment="center"
                />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quizFinishMenuButt"
            android:text="@string/done_button"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:onClick="toMenu"
            />

    </RelativeLayout>

</RelativeLayout>
