<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_achieve_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"
    tools:context="com.example.stephen.languor.achieveMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.3"
            android:id="@+id/achieveStudyLL">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:id="@+id/achieveStudyIV"
                android:src="@drawable/languor_achieve_study"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieveStudyTitle"
                    android:textSize="20sp"
                    android:text="@string/achieve_study_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieveStudyDesc"
                    android:textSize="14sp"
                    android:text="@string/unachieved"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/achieveStudyLL"
            android:layout_marginBottom="10dp"
            android:alpha="0.3"
            android:id="@+id/achieve1stQLvlLL">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:id="@+id/achieve1stQLvlIV"
                android:src="@drawable/languor_quiz_lv1"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve1stQLvlTitle"
                    android:textSize="20sp"
                    android:text="@string/achieve1_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve1stQLvlDesc"
                    android:textSize="14sp"
                    android:text="@string/unachieved"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/achieve1stQLvlLL"
            android:layout_marginBottom="10dp"
            android:alpha="0.3"
            android:id="@+id/achieve2ndQLvlLL">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:id="@+id/achieve2ndQLvlIV"
                android:src="@drawable/languor_quiz_lv2"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve2ndQLvlTitle"
                    android:textSize="20sp"
                    android:text="@string/achieve2_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve2ndQLvlDesc"
                    android:textSize="14sp"
                    android:text="@string/unachieved"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/achieve2ndQLvlLL"
            android:layout_marginBottom="10dp"
            android:alpha="0.3"
            android:id="@+id/achieve3rdQLvlLL">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:id="@+id/achieve3rdQLvlIV"
                android:src="@drawable/languor_quiz_lv3"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve3rdQLvlTitle"
                    android:textSize="20sp"
                    android:text="@string/achieve3_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve3rdQLvlDesc"
                    android:textSize="14sp"
                    android:text="@string/unachieved"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/achieve3rdQLvlLL"
            android:layout_marginBottom="10dp"
            android:alpha="0.3"
            android:id="@+id/achieve4thQLvlLL">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:id="@+id/achieve4thQLvlIV"
                android:src="@drawable/languor_quiz_lv4"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve4thQLvlTitle"
                    android:textSize="20sp"
                    android:text="@string/achieve4_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/achieve4thQLvlDesc"
                    android:textSize="14sp"
                    android:text="@string/unachieved"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
